css/skeld.css
.tablet {
    max-width: 900px;
    margin: 3rem auto;
    padding: 1rem;
    background: #495867;
    border: 3px solid #263839;
    position: relative;
}

.fa-folder {
    color: #EFCF8B;
    font-size: 7rem;
}


.tablet-tasks {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.return {
    border-radius: 50%;
    width: 50px;
    height: 50px;
    border: 3px solid grey;
    outline: none;
    cursor: pointer;
    font-size: 2rem;
    color: #36454f;
    position: absolute;
    top: 0;
    left: -80px;
}

.tablet-interface p {
    color: #fff;
    font-size: 3rem;
    text-align: center;
}

.folder {
    padding: 1rem;
    text-align: center;
    cursor: pointer;
}

.folder p {
    font-size: 1.5rem;
    text-align: center;
    font-weight: 700;
    color: #fff;
}


.admin-task-shown,
.cafeteria-task-shown,
.communications-task-shown,
.electrical-task-shown,
.engines-task-shown,
.medbay-task-shown,
.navigation-task-shown,
.o2-task-shown,
.reactor-task-shown,
.security-task-shown,
.shields-task-shown,
.storage-task-shown,
.weapons-task-shown,
.launchpad-task-shown,
.balcony-task-shown,
.greenhouse-task-shown,
.hallway-task-shown,
.laboratory-task-shown,
.office-task-shown {
    display: none;
}

.admin-task-shown h1,
.cafeteria-task-shown h1,
.communications-task-shown h1,
.electrical-task-shown h1,
.engines-task-shown h1,
.medbay-task-shown h1,
.navigation-task-shown h1,
.o2-task-shown h1,
.reactor-task-shown h1,
.security-task-shown h1,
.shields-task-shown h1,
.storage-task-shown h1,
.weapons-task-shown h1,
.launchpad-task-shown h1,
.balcony-task-shown h1,
.greenhouse-task-shown h1,
.hallway-task-shown h1,
.laboratory-task-shown h1,
.office-task-shown h1 {
    position: absolute;
    top: 15px;
    left: 10px;
}

.exit-task, 
.exit-task-cafe,
.exit-task-comms,
.exit-task-elec,
.exit-task-eng,
.exit-task-med,
.exit-task-nav,
.exit-task-o2,
.exit-task-rec,
.exit-task-sec,
.exit-task-shield,
.exit-task-stor,
.exit-task-weps,
.exit-task-off,
.exit-task-bal,
.exit-task-gre,
.exit-task-hal,
.exit-task-lab,
.exit-task-lau {
    width: 150px;
    height: 50px;
    border: 2px solid #fff;
    border-radius: 6px;
    color: #fff;
    cursor: pointer;
    outline: none;
    background-color: transparent;
    font-family: 'Amatic SC', cursive;
    font-size: 1.2rem;
    padding: .5rem;
    font-weight: 700;
    transition: 0.5s ease;
    position: absolute;
    right: 10px;
    top: 20px
}

.exit-task:hover, 
.exit-task-cafe:hover,
.exit-task-comms:hover,
.exit-task-elec:hover,
.exit-task-eng:hover,
.exit-task-med:hover,
.exit-task-nav:hover,
.exit-task-o2:hover,
.exit-task-rec:hover,
.exit-task-sec:hover,
.exit-task-shield:hover,
.exit-task-stor:hover,
.exit-task-weps:hover,
.exit-task-off:hover,
.exit-task-bal:hover,
.exit-task-gre:hover,
.exit-task-hal:hover,
.exit-task-lab:hover,
.exit-task-lau:hover {
    background-color: #fff;
    color: #263839;
}

.task-image {
    width: 310px;
}










.tablet h1 {
    color: #fff;
    font-size: 3rem;
}

.tasks {
    text-align: center;
    color: #fff;
    font-weight: 700;
}

.task-type {
    font-size: 2rem;
    margin: 30px 0;
    font-family: 'Commissioner', sans-serif;
    border-bottom: 2px solid #fff;
    padding-bottom: 10px;
}

.task-name {
    font-size: 1.25rem;
    margin: 30px 0;
    font-family: 'Commissioner', sans-serif;
}

.task-description {
    max-width: 85%;
    margin: 30px auto 60px auto;
    font-family: 'Commissioner', sans-serif;
    font-weight: 300;
}

.returnMobile {
    display: none;
}

@media (max-width: 1085px) {

    .returnMobile {
        display: block;
        text-align: center;
        width: 250px;
        height: 50px;
        border: 3px solid #36454f;
        outline: none;
        margin: 2rem auto;
        cursor: pointer;
        font-family: 'Commissioner', sans-serif;
        color: #ffffff;
        background: #495867;
        z-index: 200;
    }

    a {
        text-decoration: none;
    }

    .return {
        display: none;
    }

}

@media (max-width: 930px) {

    .fa-folder {
        font-size: 5rem;
    }

    .tablet {
        max-width: 800px;
    }

    .tablet h1 {
        color: #fff;
        font-size: 2rem;
        position: unset;
        margin: 15px 0;
        text-align: center;
    }
    

.exit-task, 
.exit-task-cafe,
.exit-task-comms,
.exit-task-elec,
.exit-task-eng,
.exit-task-med,
.exit-task-nav,
.exit-task-o2,
.exit-task-rec,
.exit-task-sec,
.exit-task-shield,
.exit-task-stor,
.exit-task-weps {
    width: 100px;
    height: 50px;
    border: 2px solid #fff;
    color: #fff;
    cursor: pointer;
    outline: none;
    background-color: transparent;
    font-family: 'Amatic SC', cursive;
    font-size: 1rem;
    font-weight: 700;
    transition: 0.5s ease;
    position: unset;
    display: block;
    margin: 10px auto;
}

}

@media (max-width: 860px) {
    .fa-folder {
        font-size: 4rem;
    }

    .tablet {
        max-width: 600px;
    }

}


@media (max-width: 650px) {
    .fa-folder {
        font-size: 3rem;
    }

    .tablet {
        max-width: 500px;
    }

}


@media (max-width: 550px) {
    .fa-folder {
        font-size: 3rem;
    }

    .tablet {
        max-width: 400px;
    }

    .task-image {
        width: 200px;
    }

    
.folder p {
    font-size: 1.1rem;
    text-align: center;
    font-weight: 700;
    color: #fff;
}


}


@media (max-width: 425px) {
    .fa-folder {
        font-size: 4rem;
    }

    .tablet {
        max-width: 280px;
    }

    
.folder p {
    font-size: 1rem;
    text-align: center;
    font-weight: 700;
    color: #fff;
}


}

